data/all_generated_tests/raw_wast_tests/if_StackCorruption_1360.wast
;; 1. **Test 1: Missing Operand for Condition Check**    - **Description**: Create an `if` instruction where the stack does not have the `i32` operand required to evaluate the condition. This checks whether the implementation correctly identifies and handles the stack underflow.    - **Constraint Checked**: Verification that the stack has the correct `i32` operand for the `if` condition evaluation.    - **Relation to Stack Corruption**: Failure to manage the stack properly here can lead to stack corruption due to missing operand handling.

(assert_invalid
  (module (func (if (result i32) (then (i32.const 1)) (else (i32.const 0)))))
  "type mismatch"
)